--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.8.2",
     "bulma": "^0.9.4",
     "sass": "^1.62.0",
     "solid-js": "^1.6.10"
